fixed minimal bugs

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   *{
     font-family: "Poppins", sans-serif;
   }
+  html, body{
+    scroll-behavior: smooth;
+  }
   body::-webkit-scrollbar{
     display: none;
   }
